--- a/fcltv_frontend/package.json
+++ b/fcltv_frontend/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/supabase": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@nuxtseo/module": "^2.0.0-beta.50",
     "nuxt": "^3.8.2",
